--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "lendable/visitor-tracking-bundle",
+    "name": "kematjaya/visitor-tracking-bundle",
     "type": "symfony-bundle",
     "description": "visitor tracking bundle",
     "keywords": [
         "tracking",
-        "Symfony2"
+        "Symfony4", "Symfony5"
     ],
     "homepage": "https://github.com/Lendable/VisitorTrackingBundle",
     "license": "MIT",
@@ -13,35 +13,38 @@
         {
             "name": "The Lendable Team",
             "email": "contact@lendable.co.uk"
+        },
+        {
+            "name": "Nur Hidayatullah",
+            "email": "kematjaya0@gmail.com"
         }
     ],
 
     "autoload": {
         "psr-4": {
-            "Alpha\\VisitorTrackingBundle\\": "src/"
+            "Kematjaya\\VisitorTrackingBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Alpha\\VisitorTrackingBundle\\Tests\\": "tests/"
+            "Kematjaya\\VisitorTrackingBundle\\Tests\\": "tests/"
         }
     },
 
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
-        "doctrine/doctrine-bundle": "~1.6",
-        "doctrine/orm": "~2.1",
-        "doctrine/inflector": "^1.4",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/inflector": "^2.0",
+        "doctrine/orm": "^2.7",
         "stof/doctrine-extensions-bundle": "*",
-        "symfony/framework-bundle": "^3.4|^4.0",
-        "symfony/security-bundle": "^3.4|^4.0"
+        "symfony/framework-bundle": "^5.0|^4.0",
+        "symfony/security-bundle": "^4.0|^5.0"
     },
     "require-dev": {
-        "behat/behat": "^3.4",
+        "behat/behat": "^3.8",
         "behat/mink-extension": "^2.3",
-        "behat/symfony2-extension": "^2.1",
-        "doctrine/inflector": "^1.3",
+        "friends-of-behat/symfony-extension": "^2.2",
         "friendsofphp/php-cs-fixer": "*",
         "php-coveralls/php-coveralls": "^2.1",
         "phpstan/phpstan": "^0.12",
