--- a/composer.json
+++ b/composer.json
@@ -47,12 +47,12 @@
         "friends-of-behat/symfony-extension": "^2.2",
         "friendsofphp/php-cs-fixer": "*",
         "php-coveralls/php-coveralls": "^2.1",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan": "^0.12.82",
+        "phpstan/phpstan-phpunit": "^0.12.18",
         "phpunit/phpunit": "^8.0",
         "sensiolabs/security-checker": "^5.0",
         "slam/phpstan-extensions": "^4.0",
-        "symfony/phpunit-bridge": "^3.0|^4.0|^5.0"
+        "symfony/phpunit-bridge": "^5.2"
     },
 
     "scripts": {
