--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "doctrine/inflector": "^2.0",
         "doctrine/orm": "^2.7",
         "friends-of-behat/mink-extension": "^2.5",
+        "mukadi/chartjs-bundle": "^2.0",
         "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/doctrine-bridge": "^5.2",
         "symfony/framework-bundle": "^5.2",
