--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "ext-json": "*",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/inflector": "^2.0",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "^2.7|^3.0",
         "friends-of-behat/mink-extension": "^2.5",
         "mukadi/chartjs-bundle": "^2.0",
         "stof/doctrine-extensions-bundle": "^1.6",
